--- a/src/Views/Components/ListTable/ListTableStats/styles.module.scss
+++ b/src/Views/Components/ListTable/ListTableStats/styles.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    padding: var(--givewp-spacing-4, var(--givewp-spacing-6));
+    margin-inline: var(--givewp-spacing-6);
 }
 
 .tableStatWidget {
