fix: remove padding from recommendation row cell

--- a/src/Views/Components/ListTable/ProductRecommendations/style.module.scss
+++ b/src/Views/Components/ListTable/ProductRecommendations/style.module.scss
@@ -1,4 +1,8 @@
 .productRecommendationRow {
+    > td {
+        padding: 0;
+    }
+
     + tr > * {
         padding-top: var(--givewp-spacing-6);
     }
