--- a/src/Views/Components/ListTable/ProductRecommendations/style.module.scss
+++ b/src/Views/Components/ListTable/ProductRecommendations/style.module.scss
@@ -9,42 +9,31 @@
 }
 
 .productRecommendation {
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: .5rem .875rem;
     background: var(--givewp-neutral-50);
-    font-size: 0.875rem;
     color: var(--givewp-neutral-900);
+    display: flex;
+    font-size: 0.875rem;
+    gap: var(--givewp-spacing-3);
+    padding: var(--givewp-spacing-4);
+    width: 100%;
 
 
-    .container {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
+    p {
+        margin: 0;
+        padding: 0;
+        font-weight: 500;
 
-        strong {
-            margin: 0 4px 0 10px;
-            font-weight: 700;
-            white-space: nowrap;
+        span {
+            margin-right: var(--givewp-spacing-4);
         }
+    }
 
-        p {
-            display: inline-flex;
-            flex-wrap: wrap;
-            margin-right: 1rem;
-            padding: 0;
-            font-weight: 500;
-        }
-
-        a {
-            display: flex;
-            gap: .55rem;
-            flex-wrap: wrap;
-            font-size: 0.875rem;
-            font-weight: 600;
-        }
+    a {
+        display: inline-flex;
+        gap: var(--givewp-spacing-2);
+        font-size: 0.875rem;
+        font-weight: 600;
     }
 
     button {
@@ -54,6 +43,7 @@
         border: none;
         cursor: pointer;
         padding: 0;
+        margin-left: auto;
         margin-right: 1.375rem;
 
         img {
@@ -73,12 +63,7 @@
         width: 100%;
         text-align: center;
 
-        .container {
-            display: inline;
-        }
-
         a {
-            display: flex;
             justify-content: center;
             width: 100%;
             text-align: center;
