fix: add room for loading indicator while not being displayed

--- a/src/Views/Components/ListTable/CustomFilter/styles.module.scss
+++ b/src/Views/Components/ListTable/CustomFilter/styles.module.scss
@@ -98,6 +98,14 @@
                 }
             }
 
+            &__indicators {
+                padding-left: 2.5rem;
+
+                &:has(.searchableSelect__loading-indicator) {
+                    padding-left: 0;
+                }
+            }
+
             &__indicator-separator {
                 display: none;
             }
