refactor: use css variable instead of hardcoded value

--- a/src/Views/Components/ListTable/CustomFilter/styles.module.scss
+++ b/src/Views/Components/ListTable/CustomFilter/styles.module.scss
@@ -99,7 +99,7 @@
             }
 
             &__indicators {
-                padding-left: 2.5rem;
+                padding-left: var(--givewp-spacing-10);
 
                 &:has(.searchableSelect__loading-indicator) {
                     padding-left: 0;
