feature: add search support to get campaigns route

--- a/src/Views/Components/ListTable/CustomFilter/styles.module.scss
+++ b/src/Views/Components/ListTable/CustomFilter/styles.module.scss
@@ -88,6 +88,7 @@
                 font-size: 1rem;
                 line-height: 1.5;
                 margin: 0;
+                min-width: 8rem;
             }
 
             &__input {
