fix: apply status color options

--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Records/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Records/styles.module.scss
@@ -42,7 +42,7 @@
         --statusOptionColor: var(--givewp-green-500);
     }
 
-    &--failed,
+    &--failing,
     &--cancelled,
     &--revoked {
         --statusOptionColor: var(--givewp-red-500);
