refactor: adjust campaign row actions spacing

--- a/src/DonationForms/V2/resources/components/styles.module.scss
+++ b/src/DonationForms/V2/resources/components/styles.module.scss
@@ -1,7 +1,15 @@
 .donationFormsEditAction:not(:has(~ .donationFormsMakeAsDefaultAction)) {
-    padding-right: 1.25rem;
+    padding-right: .5rem;
+}
+
+.donationFormsEditAction:not(:has(~ .donationFormsMakeAsDefaultAction)) + * {
+    padding-right: .25rem;
 }
 
 .donationFormsEditAction:has(~ .donationFormsMakeAsDefaultAction) + * {
     padding-right: .75rem;
+}
+
+.donationFormsEditAction:has(~ .donationFormsMakeAsDefaultAction) + * + * {
+    padding-right: .25rem;
 }
