--- a/src/Views/Components/ListTable/ListTableRows/ListTableRows.module.scss
+++ b/src/Views/Components/ListTable/ListTableRows/ListTableRows.module.scss
@@ -42,13 +42,20 @@ tr.duplicated {
         flex-shrink: 0;
     }
 
-
-    :global {
-        span:last-child {
-            display: none !important;
-        }
+    > * + ::before {
+        position: absolute;
+        inset-block: auto;
+        color: var(--givewp-neutral-200);
+        background: none;
+        content: "|";
+        block-size: 100%;
+        inline-size: 1.25rem;
+        inset-inline-start: -1.25rem;
+        font-size: 0.8125rem;
+        font-weight: 600;
+        pointer-events: none;
+        text-align: center;
     }
-
 
     > a {
         text-decoration: none;
