refactor: position separator pipe with css position properties

--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -346,6 +346,7 @@ ul[role='document'] + .flexRow {
         left: -.55rem;
         display: flex;
         align-items: center;
+        z-index: 2;
 
         svg {
             fill: #3A21D9;
