--- a/src/Views/Components/ListTable/TableCell/TableCell.module.scss
+++ b/src/Views/Components/ListTable/TableCell/TableCell.module.scss
@@ -3,7 +3,7 @@
     font-size: 1rem;
     font-weight: 500;
     line-height: 1.5;
-    padding: var(--givewp-spacing-6) var(--givewp-spacing-2) calc(var(--givewp-spacing-6) + var(--givewp-spacing-5));
+    padding: var(--givewp-spacing-6) var(--givewp-spacing-3) calc(var(--givewp-spacing-6) + var(--givewp-spacing-5));
     position: relative;
     vertical-align: middle;
 
@@ -17,11 +17,11 @@
     }
 
     &:first-child {
-        padding-inline-start: var(--givewp-spacing-6);
+        padding-inline-start: var(--givewp-spacing-4);
     }
 
     &:last-child {
-        padding-inline-end: var(--givewp-spacing-6);
+        padding-inline-end: var(--givewp-spacing-4);
     }
 
     input[type="checkbox"] {
@@ -86,6 +86,16 @@
                 padding-block-end: var(--givewp-spacing-12);
             }
         }
+    }
+
+    &[data-column-id="donorType"] {
+        text-align: center;
+    }
+
+    &[data-column-id="latestDonation"],
+    &[data-column-id="donationCount"],
+    &[data-column-id="donationRevenue"] {
+        text-align: right;
     }
 }
 
