--- a/src/Promotions/BFCM/resources/css/bfcm2025.scss
+++ b/src/Promotions/BFCM/resources/css/bfcm2025.scss
@@ -54,17 +54,19 @@
 
     &__discount {
         font-weight: 500;
-        font-size: 0.75rem;
+        font-size: 1.25rem;
+        font-weight: 500;
         line-height: 1.3;
         color: #459948;
 
         @media (min-width: 768px) {
-            font-size: 0.875rem;
+            font-size: 1.75rem;
             line-height: 1.4;
         }
 
         @media (min-width: 1024px) {
-            font-size: 1rem;
+            font-size: 2rem;
+            font-weight: 700;
             line-height: 1.5;
         }
     }
@@ -94,14 +96,12 @@
         align-items: center;
         justify-content: center;
         gap: 8px;
-        width: 293px;
-        height: 48px;
+        padding: 12px 24px;
         font-weight: 700;
         font-size: 0.875rem;
-        line-height: 1.2;
+        line-height: 1;
         border-radius: 36px;
         margin-top: .5rem;
-        padding: 12px 24px;
         background: #F29718;
         color: #fff;
         text-decoration: none;
@@ -111,7 +111,6 @@
 
         @media (min-width: 768px) {
             font-size: 1rem;
-            line-height: 1.5;
         }
 
         img {
