--- a/src/Promotions/BFCM/resources/css/bfcm2025.scss
+++ b/src/Promotions/BFCM/resources/css/bfcm2025.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     height: 186px;
     width: 100%;
-    margin-bottom: .5rem;
+    margin-bottom: var(--givewp-spacing-2);
 
     @media (min-width: 768px) {
         background-image: var(--bg-medium);
@@ -25,11 +25,19 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        gap: .5rem;
+        gap: var(--givewp-spacing-2);
         position: relative;
         z-index: 2;
-        padding: 2rem 1rem;
-        margin-left: 5rem;
+        padding: var(--givewp-spacing-4) var(--givewp-spacing-2);
+        margin: 21px 0 21px 24px;
+
+        @media (min-width: 768px) {
+            margin: 24px 0 24px 56px;
+        }
+    
+        @media (min-width: 1024px) {
+            margin: 32px 0 30px 88px;
+        }
     }
 
     &__title {
@@ -37,7 +45,7 @@
         font-weight: 700;
         font-size: 1.5rem;
         line-height: 1.25;
-        color: #022603;
+        color: var(--givewp-green-900);
         margin: 0;
         padding: 0;
 
@@ -57,7 +65,7 @@
         font-size: 1.25rem;
         font-weight: 500;
         line-height: 1.3;
-        color: #459948;
+        color: var(--givewp-green-500);
 
         @media (min-width: 768px) {
             font-size: 1.75rem;
@@ -76,7 +84,7 @@
         font-weight: 500;
         font-size: 0.875rem;
         line-height: 1.4;
-        color: #022603;
+        color: var(--givewp-green-900);
         margin: 0;
         padding: 0;
 
@@ -95,14 +103,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 8px;
-        padding: 12px 24px;
+        gap: var(--givewp-spacing-2);
+        padding: var(--givewp-spacing-3) var(--givewp-spacing-6);
         font-weight: 700;
         font-size: 0.875rem;
         line-height: 1;
         border-radius: 36px;
-        margin-top: 1rem;
-        background: #F29718;
+        margin-top: var(--givewp-spacing-4);
+        background: var(--givewp-orange-400);
         color: #fff;
         text-decoration: none;
         cursor: pointer;
@@ -120,7 +128,7 @@
         }
 
         &:hover {
-            background: #D98715;
+            background: var(--givewp-orange-500);
             color: #fff;
         }
     }
