feature: add font loading

--- a/src/Promotions/BFCM/resources/css/bfcm2025.scss
+++ b/src/Promotions/BFCM/resources/css/bfcm2025.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 .givewp-bfcm-2025-banner {
     display: flex;
     align-items: center;
