--- a/src/Promotions/BFCM/resources/css/bfcm2025.scss
+++ b/src/Promotions/BFCM/resources/css/bfcm2025.scss
@@ -1,16 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap');
 
 .givewp-bfcm-2025-banner {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    border-radius: var(--givewp-rounded-8);
     background-image: var(--bg-small);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 186px;
-    width: 100%;
-    margin-bottom: var(--givewp-spacing-2);
+    width: calc(100% - (2 * var(--givewp-spacing-2)));
+    margin: var(--givewp-spacing-2) {
+        bottom: var(--givewp-spacing-4);
+    };
+
+    &:has(+ #give-admin-campaigns-root, #give-admin-donations-root, #give-admin-donors-root, #give-admin-subscriptions-root),
+    &:has(+ #give-admin-donations-root),
+    &:has(+ #give-admin-donors-root),
+    &:has(+ #give-admin-subscriptions-root) {
+        display: none;
+    }
+
+    #give-admin-campaigns-root &,
+    #give-admin-donations-root &,
+    #give-admin-donors-root &,
+    #give-admin-subscriptions-root & {
+        margin-top: calc(var(--givewp-spacing-2) * -1);
+        margin-bottom: 0;
+    }
 
     @media (min-width: 768px) {
         background-image: var(--bg-medium);
@@ -30,15 +48,14 @@
         gap: var(--givewp-spacing-2);
         position: relative;
         z-index: 2;
-        padding: var(--givewp-spacing-4) var(--givewp-spacing-2);
-        margin: 21px 0 21px 24px;
+        padding: 21px 0 21px 24px;
 
         @media (min-width: 768px) {
-            margin: 24px 0 24px 56px;
+            padding: 24px 0 24px 56px;
         }
-    
+
         @media (min-width: 1024px) {
-            margin: 32px 0 30px 88px;
+            padding: 32px 0 30px 88px;
         }
     }
 
@@ -63,7 +80,6 @@
     }
 
     &__discount {
-        font-weight: 500;
         font-size: 1.25rem;
         font-weight: 500;
         line-height: 1.3;
@@ -76,8 +92,8 @@
 
         @media (min-width: 1024px) {
             font-size: 2rem;
-            font-weight: 700;
             line-height: 1.5;
+            font-weight: 900;
         }
     }
 
