--- a/src/Views/Components/ListTable/InterweaveSSR/styles.scss
+++ b/src/Views/Components/ListTable/InterweaveSSR/styles.scss
@@ -2,10 +2,13 @@
 
 .interweave {
     .statusBadge {
+        --color: var(--givewp-shades-white);
+        --bg-color: var(--givewp-shades-black);
+
         align-items: center;
-        background-color: black;
+        background-color: var(--bg-color);
         border-radius: 0.75rem;
-        color: #fff;
+        color: var(--color);
         column-gap: safe-rem(1);
         display: inline-flex;
         font-size: 0.75rem;
@@ -32,26 +35,26 @@
 
         &--completed,
         &--complete {
-            background: var(--givewp-emerald-100);
-            color: var(--givewp-emerald-900);
+            --bg-color: var(--givewp-emerald-100);
+            --color: var(--givewp-emerald-900);
         }
 
         &--active,
         &--publish,
         &--published {
-            background: var(--givewp-green-100);
-            color: var(--givewp-green-900);
+            --bg-color: var(--givewp-green-100);
+            --color: var(--givewp-green-900);
         }
 
         &--archived,
         &--inactive {
-            background: var(--givewp-grey-100);
-            color: var(--givewp-grey-900);
+            --bg-color: var(--givewp-grey-100);
+            --color: var(--givewp-grey-900);
         }
 
         &--failing {
-            background: var(--givewp-yellow-100);
-            color: var(--givewp-yellow-900);
+            --bg-color: var(--givewp-yellow-100);
+            --color: var(--givewp-yellow-900);
         }
 
         &--failed,
@@ -59,29 +62,39 @@
         &--abandoned,
         &--cancelled,
         &--expired {
-            background: var(--givewp-red-100);
-            color: var(--givewp-red-900);
+            --bg-color: var(--givewp-red-100);
+            --color: var(--givewp-red-900);
         }
 
         &--draft {
-            background: var(--givewp-orange-100);
-            color: var(--givewp-orange-900);
+            --bg-color: var(--givewp-orange-100);
+            --color: var(--givewp-orange-900);
         }
 
         &--pending,
         &--processing {
-            background: var(--givewp-blue-100);
-            color: var(--givewp-blue-900);
+            --bg-color: var(--givewp-blue-100);
+            --color: var(--givewp-blue-900);
         }
 
         &--upgraded {
-            background: var(--givewp-purple-50);
-            color: var(--givewp-purple-900);
+            --bg-color: var(--givewp-purple-50);
+            --color: var(--givewp-purple-900);
         }
 
         &--refunded {
-            background: var(--givewp-blue-700);
-            color: var(--givewp-blue-25);
+            --bg-color: var(--givewp-blue-700);
+            --color: var(--givewp-blue-25);
+        }
+
+        &--give_subscription {
+            --bg-color: var(--givewp-green-700);
+            --color: var(--givewp-green-25);
+        }
+
+        &--trash {
+            --bg-color: var(--givewp-red-700);
+            --color: var(--givewp-red-25);
         }
     }
 
