--- a/src/Views/Components/ListTable/TableCell/TableCell.module.scss
+++ b/src/Views/Components/ListTable/TableCell/TableCell.module.scss
@@ -29,20 +29,20 @@
 
         appearance: none;
         background-color: transparent;
-        border-radius: 0.225rem;
+        border-radius: var(--givewp-rounded-4);
         border: solid 1px var(--givewp-neutral-200);
         color: #2271b1;
         cursor: pointer;
         flex-shrink: 0;
         font-size: inherit;
-        height: 1.333rem;
+        height: 1.5rem;
         margin: 0;
         margin: 0;
         padding: 0;
         transform: translateY(-1px);
         transition: background-color var(--transition), border-color var(--transition), color var(--transition), box-shadow var(--transition);
         vertical-align: middle;
-        width: 1.333rem;
+        width: 1.5rem;
 
         &::before {
             content: none;
@@ -60,7 +60,7 @@
             background-color: #2271b1;
             background-image: url("data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 width=%2724%27 height=%2724%27 viewBox=%270 0 24 24%27 fill=%27none%27 stroke=%27rgb%28255, 255, 255%29%27 stroke-width=%274%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27%3E%3Cpolyline points=%2720 6 9 17 4 12%27%3E%3C/polyline%3E%3C/svg%3E");
             background-position: center;
-            background-size: 0.75em auto;
+            background-size: 1rem auto;
             background-repeat: no-repeat;
             border-color: #2271b1;
         }
@@ -99,16 +99,13 @@
 
     &[data-column-id="campaigns-donationsCount"],
     &[data-column-id="campaigns-revenue"],
-    &[data-column-id="donationForms-dateCreated"],
     &[data-column-id="donationForms-donationCount"],
     &[data-column-id="donationForms-donationRevenue"],
     &[data-column-id="donations-amount"],
-    &[data-column-id="donations-createdAt"],
     &[data-column-id="donors-donationCount"],
     &[data-column-id="donors-donationRevenue"],
     &[data-column-id="donors-latestDonation"],
-    &[data-column-id="subscriptions-amount"],
-    &[data-column-id="subscriptions-renewalDate"] {
+    &[data-column-id="subscriptions-amount"] {
         text-align: right;
     }
 }
