fix: restyle donor type pill on Donor Details page

--- a/src/Admin/components/SummaryTable/styles.module.scss
+++ b/src/Admin/components/SummaryTable/styles.module.scss
@@ -38,3 +38,20 @@ $breakpoint-desktop: 900px;
   padding: var(--givewp-spacing-3) 0;
   text-align: right;
 }
+
+.pill {
+    --border-width: 1px;
+    --padding-x: calc(var(--givewp-spacing-3) - var(--border-width));
+    --padding-y: calc(var(--givewp-spacing-1) - var(--border-width));
+    align-items: center;
+    background-color: var(--givewp-neutral-25);
+    border-radius: 1.5rem;
+    border: var(--border-width) solid var(--givewp-neutral-600);
+    color: var(--givewp-neutral-900);
+    display: inline-flex ;
+    font-size: 0.75rem;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 1.5;
+    padding: var(--padding-y) var(--padding-x);
+}
